--- a/net/Kconfig
+++ b/net/Kconfig
@@ -230,7 +230,7 @@ source "net/openvswitch/Kconfig"
 source "net/vmw_vsock/Kconfig"
 source "net/netlink/Kconfig"
 source "net/mpls/Kconfig"
-source "net/hsr/Kconfig"
+source "net/hsr-prp/Kconfig"
 source "net/switchdev/Kconfig"
 source "net/l3mdev/Kconfig"
 
